# c_kata

./: .gitignore  CMakeLists.txt  README.md
src/: BinarySearchList.c  BinarySearchList.h  BubbleSort.c  BubbleSort.h  LinearSearchList.c  LinearSearchList.h  Queue.c  Queue.h  Stack.c  Stack.h  TwoCrystalBalls.c  TwoCrystalBalls.h
tests/: test_BinarySearchList.c  test_BubbleSort.c  test_LinearSearchList.c  test_Queue.c  test_Stack.c  test_TwoCrystalBalls.c
